# yt-dlp-GUI

./: CMakeLists.txt  ElidedLabel.cpp  ElidedLabel.h  LICENSE  Model.cpp  Model.h  README.md  View.cpp  View.h  controller.cpp  controller.h  main.cpp  mainwindow.h  mainwindow.ui
src/: Controller.cpp  Controller.h  ElidedLabel.cpp  ElidedLabel.h  Model.cpp  Model.h  View.cpp  View.h  downloadmodel.cpp  downloadmodel.h  main.cpp
